Downloads/V7.5/What gets downloaded.md
# What gets downloaded?
As an Open Source Project dedicated to transparency, it's very important we guide and help users understand what gets downloaded and for what reason!

[Oneclick Tools Folder](https://github.com/QuakedK/Oneclick/raw/refs/heads/main/Downloads/OneclickTools.zip) | Contains Includes NSudo, OOshutup10, Edge Remover, Task Destroyer, Process Destroyer, Update Disabler, Power Plans, Oneclick's Wallpaper, Nvidia Profile Inspector, etc.

[NSudo](https://github.com/M2TeamArchived/NSudo/releases/tag/9.0-Preview1) | An Open Source tool that lets you run programs or commands with full system privileges.

[OOshutup10](https://dl5.oo-software.com/files/ooshutup10/OOSU10.exe) & [OOshutup10 Config](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V7.5/QuakedOOshutup10%20V2.cfg) | A program that disables tracking, spyware and various different forms of bloat.

[Edge Remover](https://github.com/QuakedK/Edge-Remover) | An open source bat, created by me that remove Microsoft Edge. However the folder thats in Oneclick Tool's, is the Edge Setup EXE that when ran with Command-Line Arguments allows it remove edge. Learn more here -> [Edge Remover](https://github.com/QuakedK/Edge-Remover/blob/main/Downloads/Whats%20Downloaded.md)

[Task Destroyer](https://github.com/QuakedK/Task-Destroyer) An open source bat, created by me that removes all of Task Scheduler.

[Process Destroyer](https://github.com/QuakedK/Task-Destroyer) An open source bat, created by me that disables additional services using NSudo.

[Update Disabler](https://github.com/QuakedK/Task-Destroyer) An open source bat, created by me that disables and removes Windows Updates.

[Power Plans](https://github.com/QuakedK/Oneclick/blob/main/Downloads/PowerPlans.zip) | Pow/Power plan files.

[Oneclick's Wallpaper](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V7.5/Oneclick%20Purple%20%26%20Blue%204K%20Wallpaper.jpg) | The offical Oneclick Wallpaper Jpg, downscaled sightly to lower the tools folder size. Get the full 4K one here -> [4k Oneclick Wallpaper[(https://github.com/QuakedK/Scripting-Station/blob/main/Oneclick%20Wallpapers/Oneclick%20Purple%20%26%20Blue%204K.png)

[Nvidia Profile Inspector](https://github.com/Orbmu2k/nvidiaProfileInspector/releases/download/2.4.0.4/nvidiaProfileInspector.zip) & [Nvidia Profile Inspector Config](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V7.5/QuakedOptimizedNVProflie.nip) | A Nvidia Control Panel Editor/Inspector.

# Optional Downloads
[Dcontrol](https://www.sordum.org/9480/defender-control-v2-1/) | A Windows Defender disabler. Due to the nature and purpose of dControl disabling windows defender of course it gets flagged. Dcontrol is made by Sordum a known and reputable website known for creating popular software like DNS Jumper, PowerRun, Edge Blocker and More!
[Dcontrol Reddit Post #1](https://www.reddit.com/r/antivirus/comments/172uziw/sordums_defender_control/)
[Dcontrol Reddit Post #2](https://www.reddit.com/r/windows/comments/tcqiwm/hey_guys_can_someone_say_if_dcontrol_is_safe_link/)

[Open Shell](https://github.com/Open-Shell/Open-Shell-Menu/releases/download/v4.4.191/OpenShellSetup_4_4_191.exe) & [Open Shell Config](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V7.5/OpenShellTheme.xml) | A Windows Search Alternative.

# Non-Optional Download
[Visual C++ 2015-2022 Redistributable](https://aka.ms/vs/17/release/vc_redist.x64.exe) | A Microsoft Runtimes installer. (Installs only if the user doesn't already have the vc runtimes)

# Questions
Why automatically download a folder/files at start, isn't that suspicious? | Oneclick will openly and transparently download a tools/resources folder. Going as far having notations explaining what gets downloaded and inside of the tools folder it contains txt files linking and explaining the use of the programs.

Why doesn't Oneclick download things like NSudo, Dcontrol, DPC Checker, Timer Resolution and OOshutup10 from their original sites? | Oneclick automatically downloads a tools folder containing those program because it's more efficient then having Oneclick download and extract each one by one. Instead of curling and extracting one by one, not only does Oneclick save time upon launch but space and size, having Oneclick not waste lines of code and be as efficient as possible is important!
