Downloads/V8.0/What gets downloaded.md
# What gets downloaded in Oneclick V8.0+
As an Open Source Project dedicated to transparency, it's very important we guide and help users understand what gets downloaded and for what reason!

[Oneclick Tools Folder](https://github.com/QuakedK/Oneclick/raw/refs/heads/main/Downloads/V8.0/OneclickTools.zip) | Includes Audio Bloat Remover, Autologger Destroyer, Browser Downloader, DPC Checker, Edge Remover, Nsudo, Nvidia Profile Inspector, Oneclick Wallpaper, OOShutup10, Power Plans, Process Destroyer, Task Destroyer, Timer Resolution, Update Disabler, Winver Logo, etc.

[Audio Bloat Remover](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V8.0/Audio%20Bloat%20Remover%20V1.0.bat) | An open source batch that deletes Realtek, Sound Research and VisiSonics audio bloat, created by me!

[Autologger Destroyer](https://github.com/QuakedK/Autologger-Destroyer/releases/download/AutologgerDisabler/Oneclick-Autologger-Destroyer-V1.0.bat) | An open source batch that disables Windows Autologgers, created by me!

[Browser Downloader](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V8.0/Browser%20Downloader%20V1.0.bat) | A simple open source batch that downloads browsers, created by me!

[DPC Checker](https://www.softpedia.com/get/System/System-Info/DPC-Latency-Checker.shtml) | A program that measures DPC latency and fixes Timer Res/Delta's on Win 10 20H2 and above.

[Edge Remover](https://github.com/QuakedK/Edge-Remover/blob/main/Downloads/setup.exe) | An open source bat, created by me that remove Microsoft Edge. However the folder thats in Oneclick Tool's, is the Edge Setup EXE that when ran with Command-Line Arguments allows it remove edge. Learn more here -> [Edge Remover](https://github.com/QuakedK/Edge-Remover/blob/main/Downloads/Whats%20Downloaded.md)

[NSudo](https://github.com/M2TeamArchived/NSudo/releases/tag/9.0-Preview1) | An Open Source tool that lets you run programs or commands with full system privileges/TrustedInstaller.

[Nvidia Profile Inspector](https://github.com/Orbmu2k/nvidiaProfileInspector) & [Nvidia Profile Inspector Config](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V8.0/QuakedV2.nip) | An open source Nvidia Control Panel Editor/Inspector.

[Oneclick's Wallpaper](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V7.5/Oneclick%20Purple%20%26%20Blue%204K%20Wallpaper.jpg) | The offical Oneclick Wallpaper Jpg, downscaled sightly to lower the tools folder size. Get the full 4K one here -> [4k Oneclick Wallpaper](https://github.com/QuakedK/Oneclick/blob/main/Wallpapers/Oneclick%20Purple%20%26%20Blue%204K.png)

[OOshutup10](https://dl5.oo-software.com/files/ooshutup10/OOSU10.exe) & [OOshutup10 Config](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V8.0/QuakedOOshutup10%20V2.cfg) | A program that disables tracking, spyware and various different forms of bloat.

[Power Plans](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V8.0/PowerPlans.zip) | Pow/Power plan files.

[Process Destroyer](https://github.com/QuakedK/Process-Destroyer/releases/download/WindowsServiceRemover/Oneclick-Process-Destroyer-V2.5.bat) & [Process Destroyer Extreme](https://github.com/QuakedK/Process-Destroyer/releases/download/WindowsServiceRemover/Oneclick-Process-Destroyer-Extreme-V2.5.bat) | Open source bats that disable or delete services depending on the version chosen. created by me!

[Task Destroyer](https://github.com/QuakedK/Task-Destroyer/releases/download/TaskSchedulerDeleter/Oneclick-Task-Destroyer-V1.3.bat) | A simple open source batch that disables Windows Task, created by me!

[Timer Resolution](https://github.com/valleyofdoom/TimerResolution/releases/tag/SetTimerResolution-v1.0.0) | An open source program that may lower system latency by adjusting the system clock.

[Update Disabler](https://github.com/QuakedK/Update-Disabler/releases/download/Winupdatedisabler/Oneclick-Update-Disabler-V1.2.bat) | A simple open source batch that disables Windows Updates, created by me!

[Wifi Fixer](https://github.com/QuakedK/Oneclick/blob/main/Downloads/Revert/Wifi%20Fixer%20V3.5.bat) |  A simple open source batch that enables/fixes Wifi after Oneclick.

[Winver Logo](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V8.0/Basebrd.zip) | A modified DLL, that changes how the Winver branding looks.

# Optional Downloads
[Dcontrol](https://www.sordum.org/9480/defender-control-v2-1/) | A Windows Defender disabler. Due to the nature and purpose of dControl disabling windows defender of course it gets flagged. Dcontrol is made by Sordum a known and reputable website known for creating popular software like DNS Jumper, PowerRun, Edge Blocker and More!
[Dcontrol Reddit Post #1](https://www.reddit.com/r/antivirus/comments/172uziw/sordums_defender_control/)
[Dcontrol Reddit Post #2](https://www.reddit.com/r/windows/comments/tcqiwm/hey_guys_can_someone_say_if_dcontrol_is_safe_link/)

[Open Shell](https://github.com/Open-Shell/Open-Shell-Menu/releases/download/v4.4.191/OpenShellSetup_4_4_191.exe) & [Open Shell Config](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V8.0/OpenShellTheme.xml) | A Windows Search Alternative.

# Non-Optional Download
[Visual C++ 2015-2022 Redistributable](https://aka.ms/vs/17/release/vc_redist.x64.exe) | A Microsoft Runtimes installer. (Installs only if the user doesn't already have the vc runtimes)

[Nvidia Control Panel](https://github.com/QuakedK/Oneclick/blob/main/Downloads/V8.0/nvcplui.exe) | The offical Nvidia Control Panel standalone exe. (Installs only if the does Nvidia Tweaks)

# Questions
Why automatically download a folder/files at start, isn't that suspicious? | Oneclick will openly and transparently download a tools/resources folder. Going as far having notations explaining what gets downloaded and inside of the tools folder it contains txt files linking and explaining the use of the programs.

Why doesn't Oneclick download things like NSudo, Dcontrol, DPC Checker, Timer Resolution and OOshutup10 from their original sites? | Oneclick automatically downloads a tools folder containing those program because it's more efficient then having Oneclick download and extract each one by one. Instead of curling and extracting one by one, not only does Oneclick save time upon launch but space and size, having Oneclick not waste lines of code and be as efficient as possible is important!

# GPL obligations
These external tools are not part of the release itself, are independently licensed, and are not subject to the GPL obligations of the batch script.
